RAG metadata refactor