@@ -1,22 +1,30 @@
 package cloud.cleo.wahkon.service;
 
+import cloud.cleo.wahkon.model.IngestMetadata;
+import cloud.cleo.wahkon.model.IngestMetadata.ContentKind;
+import cloud.cleo.wahkon.util.Sha256Hex;
 import java.io.InputStream;
+import java.net.URI;
+import java.time.Instant;
+import java.time.OffsetDateTime;
+import java.util.Optional;
 import lombok.extern.log4j.Log4j2;
 import org.apache.pdfbox.Loader;
 import org.apache.pdfbox.pdmodel.PDDocument;
-import org.apache.pdfbox.text.PDFTextStripper;
-import org.springframework.beans.factory.annotation.Qualifier;
-import org.springframework.http.MediaType;
-import org.springframework.stereotype.Service;
-import org.springframework.web.client.RestClient;
-
-import java.util.Optional;
 import org.apache.pdfbox.pdmodel.PDDocumentInformation;
 import org.apache.pdfbox.pdmodel.common.PDMetadata;
+import org.apache.pdfbox.text.PDFTextStripper;
 import org.apache.xmpbox.XMPMetadata;
+import org.apache.xmpbox.schema.AdobePDFSchema;
 import org.apache.xmpbox.schema.DublinCoreSchema;
+import org.apache.xmpbox.schema.XMPBasicSchema;
 import org.apache.xmpbox.xml.DomXmpParser;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Service;
+import org.springframework.web.client.RestClient;
 
 @Service
 @Log4j2
@@ -29,13 +37,25 @@ public class PdfTextExtractorService {
     // tune for your lambda limits
     private static final int MAX_PDF_BYTES = 20 * 1024 * 1024; // 20MB
 
-    public Optional<PdfText> fetchAndExtract(String url) {
+    /**
+     * Download a PDF and extract:
+     * - normalized text
+     * - IngestMetadata contract (best-effort + HTTP header fallbacks)
+     * @param url
+     * @return 
+     */
+    public Optional<PdfExtraction> fetchAndExtract(String url) {
+        final Instant fetchedAt = Instant.now();
+        final URI sourceUri = safeUri(url).orElse(null);
+
         try {
-            byte[] bytes = restClient.get()
+            ResponseEntity<byte[]> resp = restClient.get()
                     .uri(url)
                     .accept(MediaType.APPLICATION_PDF, MediaType.ALL)
                     .retrieve()
-                    .body(byte[].class);
+                    .toEntity(byte[].class);
+
+            byte[] bytes = resp.getBody();
 
             if (bytes == null || bytes.length == 0) {
                 log.debug("PDF download empty: {}", url);
@@ -45,8 +65,27 @@ public class PdfTextExtractorService {
                 log.info("Skipping PDF too large ({} bytes): {}", bytes.length, url);
                 return Optional.empty();
             }
-            
-            return Optional.of(extract(bytes));
+
+            // ---- HTTP header metadata (fallbacks) ----
+            Instant httpLastModified = null;
+            try {
+                long lm = resp.getHeaders().getLastModified();
+                if (lm > 0) {
+                    httpLastModified = Instant.ofEpochMilli(lm);
+                }
+            } catch (Exception ignored) {
+                // headers.getLastModified() can throw if value malformed
+            }
+
+            String httpContentType = resp.getHeaders().getContentType() != null
+                    ? resp.getHeaders().getContentType().toString()
+                    : null;
+
+            long httpContentLength = resp.getHeaders().getContentLength(); // -1 if unknown
+
+            HttpHints httpHints = new HttpHints(httpLastModified, httpContentType, httpContentLength);
+
+            return Optional.of(extract(sourceUri, bytes, fetchedAt, httpHints));
 
         } catch (Exception e) {
             log.warn("PDF fetch/extract failed: {}", url, e);
@@ -54,36 +93,89 @@ public class PdfTextExtractorService {
         }
     }
 
-    private PdfText extract(byte[] pdfBytes) throws Exception {
+    private PdfExtraction extract(URI sourceUrl, byte[] pdfBytes, Instant fetchedAt, HttpHints http) throws Exception {
         try (PDDocument doc = Loader.loadPDF(pdfBytes)) {
-            var stripper = new PDFTextStripper();
+            // -------- Text extraction --------
+            PDFTextStripper stripper = new PDFTextStripper();
             stripper.setSortByPosition(true);
+            String text = normalize(stripper.getText(doc));
 
-            return new PdfText(
-                    normalize(stripper.getText(doc)), 
-                    resolveTitle(doc)
+            // -------- Metadata extraction (best-effort) --------
+            PDDocumentInformation info = doc.getDocumentInformation();
+            XmpFields xmp = readXmp(doc).orElseGet(XmpFields::empty);
+
+            String title = firstNonBlank(
+                    normalizeTitle(xmp.dcTitle()),
+                    normalizeTitle(info != null ? info.getTitle() : null)
             );
+
+            String author = firstNonBlank(
+                    normalizeTitle(xmp.dcCreator()),
+                    normalizeTitle(info != null ? info.getAuthor() : null)
+            );
+
+            // Summary: prefer XMP dc:description then PDF Info subject (optional)
+            String summary = firstNonBlank(
+                    normalizeTitle(xmp.dcDescription()),
+                    normalizeTitle(info != null ? info.getSubject() : null)
+            );
+
+            // ---- Dates (with null safety) ----
+            Instant infoCreated = toInstant(info != null ? info.getCreationDate() : null);
+            Instant infoModified = toInstant(info != null ? info.getModificationDate() : null);
+
+            Instant createdAt = firstNonNull(
+                    xmp.createDate(),
+                    xmp.dcDate(),
+                    infoCreated
+            );
+
+            // Fallback chain for modifiedAt includes HTTP Last-Modified
+            Instant modifiedAt = firstNonNull(
+                    xmp.modifyDate(),
+                    infoModified,
+                    http.lastModified()
+            );
+
+            // PDFs rarely have explicit "publishedAt" distinct from createdAt.
+            // If you later decide "publishedAt == createdAt for PDFs", do it in one place:
+            Instant publishedAt = null;
+
+            // Content length: prefer actual bytes length; header length is useful when body is absent (but we have body).
+            long contentLengthBytes = pdfBytes.length > 0
+                    ? pdfBytes.length
+                    : (http.contentLength() > 0 ? http.contentLength() : 0L);
+
+            // Mime type: prefer HTTP content-type, else application/pdf
+            String mimeType = firstNonBlank(http.contentType(), MediaType.APPLICATION_PDF_VALUE);
+
+            IngestMetadata md = IngestMetadata.builder()
+                    .sourceUrl(sourceUrl)
+                    .contentHashSha256(Sha256Hex.toSha256(pdfBytes))
+                    .contentKind(ContentKind.PDF)
+                    // Best set by caller/crawler; optional here
+                    // .sourceSystem("cityofwahkon")
+                    .title(title)
+                    .summary(summary)
+                    .author(author)
+                    .publishedAt(publishedAt)
+                    .createdAt(createdAt)
+                    .modifiedAt(modifiedAt)
+                    .fetchedAt(fetchedAt)
+                    .observedAt(null)
+                    .pageCount(doc.getNumberOfPages())
+                    .contentLengthBytes(contentLengthBytes)
+                    .mimeType(mimeType)
+                    .build();
+
+            return new PdfExtraction(text, md);
         }
     }
 
-    private String resolveTitle(PDDocument doc) {
-        // 1) Prefer XMP dc:title (metadata stream)
-        var xmpTitle = readXmpDcTitle(doc).orElse(null);
-        if (isNotBlank(xmpTitle)) {
-            return xmpTitle;
-        }
-
-        // 2) Fallback to PDF Info dictionary Title
-        PDDocumentInformation info = doc.getDocumentInformation();
-        if (info != null && isNotBlank(info.getTitle())) {
-            return info.getTitle();
-        }
-
-        
-        return null;
-    }
-
-    private Optional<String> readXmpDcTitle(PDDocument doc) {
+    /**
+     * Pull a few useful XMP fields (best-effort). If parsing fails, caller falls back to PDF Info / HTTP headers.
+     */
+    private Optional<XmpFields> readXmp(PDDocument doc) {
         try {
             PDMetadata meta = doc.getDocumentCatalog() != null ? doc.getDocumentCatalog().getMetadata() : null;
             if (meta == null) {
@@ -92,52 +184,131 @@ public class PdfTextExtractorService {
 
             try (InputStream in = meta.exportXMPMetadata()) {
                 if (in == null) {
-                   return Optional.empty();
-                }
-
-                XMPMetadata xmp = new DomXmpParser().parse(in);
-                DublinCoreSchema dc = xmp.getDublinCoreSchema();
-                if (dc == null) {
                     return Optional.empty();
                 }
 
-                // This is the key point: no LangAlt class needed in your code.
-                // dc.getTitle() already resolves the lang-alt title value.
-                var title = dc.getTitle();
-                return isNotBlank(title) ? Optional.of(title) : Optional.empty();
+                XMPMetadata xmp = new DomXmpParser().parse(in);
+
+                DublinCoreSchema dc = xmp.getDublinCoreSchema();
+                XMPBasicSchema basic = xmp.getXMPBasicSchema();
+                AdobePDFSchema pdf = xmp.getAdobePDFSchema(); // currently unused, but kept handy
+
+                String dcTitle = dc != null ? dc.getTitle() : null;
+                String dcCreator = (dc != null && dc.getCreators() != null && !dc.getCreators().isEmpty())
+                        ? dc.getCreators().getFirst()
+                        : null;
+                String dcDescription = dc != null ? dc.getDescription() : null;
+
+                Instant dcDate = null;
+                if (dc != null && dc.getDates() != null && !dc.getDates().isEmpty()) {
+                    dcDate = toInstant(dc.getDates().getFirst());
+                }
+
+                Instant createDate = toInstant(basic != null ? basic.getCreateDate() : null);
+                Instant modifyDate = toInstant(basic != null ? basic.getModifyDate() : null);
+
+                @SuppressWarnings("unused")
+                String ignoredKeywords = pdf != null ? pdf.getKeywords() : null;
+
+                return Optional.of(new XmpFields(dcTitle, dcCreator, dcDescription, dcDate, createDate, modifyDate));
             }
         } catch (Exception e) {
-            //log.debug("XMP title read failed (will fall back): {}", e.toString());
             return Optional.empty();
         }
     }
 
-    private String normalizeTitle(String s) {
+    private static Instant toInstant(Object maybeCalendarOrDate) {
+        // pdfbox/xmpbox return types vary; safest is to support Calendar + OffsetDateTime + Date
+        if (maybeCalendarOrDate == null) return null;
+
+        if (maybeCalendarOrDate instanceof java.util.Calendar cal) {
+            try { return cal.toInstant(); } catch (Exception ignored) { return null; }
+        }
+        if (maybeCalendarOrDate instanceof java.util.Date d) {
+            return Instant.ofEpochMilli(d.getTime());
+        }
+        if (maybeCalendarOrDate instanceof OffsetDateTime odt) {
+            return odt.toInstant();
+        }
+
+        // XMPBasicSchema getters in some versions return String; if so, try parsing.
+        if (maybeCalendarOrDate instanceof String s) {
+            return tryParseInstant(s);
+        }
+
+        return null;
+    }
+
+    private static Instant tryParseInstant(String s) {
+        if (s == null || s.isBlank()) return null;
+        try {
+            return Instant.parse(s);
+        } catch (Exception ignored) {
+            // Sometimes it's like "2025-01-01T12:34:56-06:00" (still ISO) -> Instant.parse supports that.
+            // If it isn't strictly parseable, ignore.
+            return null;
+        }
+    }
+
+    private static Optional<URI> safeUri(String s) {
+        try {
+            return s == null ? Optional.empty() : Optional.of(URI.create(s));
+        } catch (Exception e) {
+            return Optional.empty();
+        }
+    }
+
+    private static String normalizeTitle(String s) {
         if (s == null) return null;
-        return s.replace('\u0000', ' ')
+        String n = s.replace('\u0000', ' ')
                 .replace('\u00A0', ' ')
                 .replaceAll("\\s+", " ")
                 .trim();
+        return n.isBlank() ? null : n;
     }
 
     private static String normalize(String s) {
-        if (s == null) {
-            return "";
-        }
+        if (s == null) return "";
         return s.replace('\u00A0', ' ')
                 .replaceAll("\\s+", " ")
                 .trim();
     }
-    
-    private static boolean isNotBlank(String s) {
-        return s != null && !s.trim().isEmpty();
+
+    private static String firstNonBlank(String... vals) {
+        if (vals == null) return null;
+        for (String v : vals) {
+            if (v != null && !v.isBlank()) return v;
+        }
+        return null;
     }
 
-    private static boolean notBlank(String s) {
-        return s != null && !s.isBlank();
+    @SafeVarargs
+    private static <T> T firstNonNull(T... vals) {
+        if (vals == null) return null;
+        for (T v : vals) {
+            if (v != null) return v;
+        }
+        return null;
     }
 
-    public record PdfText(String text, String title) {
+    public record PdfExtraction(String text, IngestMetadata metadata) {}
 
+    private record XmpFields(
+            String dcTitle,
+            String dcCreator,
+            String dcDescription,
+            Instant dcDate,
+            Instant createDate,
+            Instant modifyDate
+    ) {
+        static XmpFields empty() {
+            return new XmpFields(null, null, null, null, null, null);
+        }
     }
+
+    private record HttpHints(
+            Instant lastModified,
+            String contentType,
+            long contentLength
+    ) {}
 }
